--- a/project02/Project02_logic.ipynb
+++ b/project02/Project02_logic.ipynb
@@ -261,8 +261,8 @@
     "    Rain = Atom('Rain')                   # whether it's raining\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    return Implies(And(Summer, California), Not(Rain))\n",
-    "    # raise NotImplementedError()"
+    "    # raise NotImplementedError()\n",
+    "    return Implies(And(Summer, California), Not(Rain))"
    ]
   },
   {
@@ -290,7 +290,7 @@
      "output_type": "stream",
      "text": [
       "You matched the 7 models\n",
-      "Example model: {'Summer'}\n"
+      "Example model: {'California', 'Rain'}\n"
      ]
     }
    ],
@@ -343,9 +343,10 @@
     "    Rain = Atom('Rain')              # whether it is raining\n",
     "    Wet = Atom('Wet')                # whether it it wet\n",
     "    Sprinklers = Atom('Sprinklers')  # whether the sprinklers are on\n",
+    "\n",
     "    # YOUR CODE HERE\n",
-    "    return Equiv(Wet, Or(Rain, Sprinklers))\n",
-    "    # raise NotImplementedError()"
+    "    # raise NotImplementedError()\n",
+    "    return Equiv(Wet, Or(Rain, Sprinklers))"
    ]
   },
   {
@@ -373,7 +374,7 @@
      "output_type": "stream",
      "text": [
       "You matched the 4 models\n",
-      "Example model: {'Wet', 'Rain'}\n"
+      "Example model: {'Sprinklers', 'Wet'}\n"
      ]
     }
    ],
@@ -425,9 +426,10 @@
     "    # Predicates to use:\n",
     "    Day = Atom('Day')     # whether it's day\n",
     "    Night = Atom('Night') # whether it's night\n",
+    "\n",
     "    # YOUR CODE HERE\n",
-    "    return Or(And(Day, Not(Night)), And(Not(Day), Night))\n",
-    "    # raise NotImplementedError()"
+    "    # raise NotImplementedError()\n",
+    "    return Or(And(Day, Not(Night)), And(Not(Day), Night))"
    ]
   },
   {
@@ -542,9 +544,10 @@
     "\n",
     "    # Note: You do NOT have to enforce that the mother is a \"person\"\n",
     "    # YOUR CODE HERE\n",
-    "    # Forall x, Person(x) => (Exists y, Mother(x, y))\n",
-    "    return Forall('$x', Implies(Person('$x'), Exists('$y', Mother('$x', '$y'))))\n",
-    "    # raise NotImplementedError()"
+    "    # raise NotImplementedError()\n",
+    "    \n",
+    "    # ∀x, Person(x) ⇒ (∃y, Mother(x, y))\n",
+    "    return Forall('$x', Implies(Person('$x'), Exists('$y', Mother('$x', '$y'))))"
    ]
   },
   {
@@ -572,7 +575,7 @@
      "output_type": "stream",
      "text": [
       "You matched the 343 models\n",
-      "Example model: {'Mother(o3,o2)', 'Mother(o3,o1)', 'Mother(o2,o1)', 'Person(o3)'}\n"
+      "Example model: {'Mother(o1,o2)', 'Mother(o3,o1)', 'Mother(o3,o2)', 'Mother(o2,o3)', 'Person(o3)', 'Mother(o2,o1)'}\n"
      ]
     }
    ],
@@ -628,11 +631,11 @@
     "\n",
     "    # Note: You do NOT have to enforce that the child is a \"person\"\n",
     "    # YOUR CODE HERE\n",
-    "    # Exists x, Person(x) and (Not Exists y, Child(x, y))\n",
-    "    x = '$x'\n",
-    "    y = '$y'\n",
-    "    return Exists(x, And(Person(x), Forall(y, Not(Child(x, y)))))\n",
-    "    # raise NotImplementedError()"
+    "    # raise NotImplementedError()\n",
+    "    \n",
+    "    # ∃x, Person(x) ∧ (¬∃y, Child(x, y))\n",
+    "    x, y = '$x', '$y'\n",
+    "    return Exists(x, And(Person(x), Forall(y, Not(Child(x, y)))))    "
    ]
   },
   {
@@ -660,7 +663,7 @@
      "output_type": "stream",
      "text": [
       "You matched the 169 models\n",
-      "Example model: {'Person(o3)', 'Child(o2,o1)', 'Person(o1)'}\n"
+      "Example model: {'Person(o1)', 'Child(o2,o1)', 'Child(o3,o1)', 'Child(o3,o2)', 'Person(o3)'}\n"
      ]
     }
    ],
@@ -746,10 +749,11 @@
     "    def Daughter(x, y): return Atom('Daughter', x, y)  # whether x has a daughter y\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    # ∀x,y: Child(x, y) and Female(y) <=> Daughter(x, y)\n",
+    "    # raise NotImplementedError()\n",
+    "    \n",
+    "    # ∀x,y: Child(x, y) ∧ Female(y) ⇔ Daughter(x, y)\n",
     "    x, y = '$x', '$y'\n",
-    "    return Forall(x, Forall(y, Equiv(And(Child(x, y), Female(y)), Daughter(x, y))))\n",
-    "    # raise NotImplementedError()"
+    "    return Forall(x, Forall(y, Equiv(And(Child(x, y), Female(y)), Daughter(x, y))))"
    ]
   },
   {
@@ -777,7 +781,7 @@
      "output_type": "stream",
      "text": [
       "You matched the 512 models\n",
-      "Example model: {'Female(o2)', 'Daughter(o1,o3)', 'Female(o3)', 'Child(o1,o3)'}\n"
+      "Example model: {'Female(o3)', 'Child(o2,o1)', 'Child(o1,o2)', 'Child(o3,o1)', 'Child(o3,o2)'}\n"
      ]
     }
    ],
@@ -819,7 +823,9 @@
     "    def Female(x): return Atom('Female', x)                  # whether x is female\n",
     "    def Parent(x, y): return Atom('Parent', x, y)            # whether x has a parent y\n",
     "    def Grandmother(x, y): return Atom('Grandmother', x, y)  # whether x has a grandmother y\n",
+    "    \n",
     "    # YOUR CODE HERE\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    # Forall x, y: (Exists z: Parent(x, z) and Parent(z, y)) and Female(y) <=> Grandmother(x, y)\n",
     "    x, y, z = '$x', '$y', '$z'\n",
@@ -827,8 +833,7 @@
     "        Equiv(\n",
     "            And(Exists(z, And(Parent(x, z), Parent(z, y))), Female(y)),\n",
     "            Grandmother(x, y)\n",
-    "    )))\n",
-    "    # raise NotImplementedError()"
+    "    )))"
    ]
   },
   {
@@ -856,7 +861,7 @@
      "output_type": "stream",
      "text": [
       "You matched the 512 models\n",
-      "Example model: {'Parent(o2,o3)', 'Parent(o1,o2)', 'Parent(o1,o3)'}\n"
+      "Example model: {'Parent(o1,o2)'}\n"
      ]
     }
    ],
@@ -954,6 +959,8 @@
     "    \n",
     "    # You should add 5 formulas, one for each of facts 1-5.\n",
     "    # YOUR CODE HERE\n",
+    "    # raise NotImplementedError()\n",
+    "    \n",
     "    x, y = '$x', '$y'\n",
     "    \n",
     "    # Fact 1: TellTruth(susan) ⇔ CrashedServer(nicole)\n",
@@ -983,7 +990,6 @@
     "                Not(Equals(y, x))\n",
     "    ))))))\n",
     "    \n",
-    "    # raise NotImplementedError()\n",
     "    query = CrashedServer('$x')\n",
     "    return (formulas, query)"
    ]
@@ -1074,7 +1080,7 @@
      "output_type": "stream",
      "text": [
       "You matched the 2 models\n",
-      "Example model: {'CrashedServer(nicole)', 'TellTruth(susan)'}\n"
+      "Example model: set()\n"
      ]
     }
    ],
@@ -1110,7 +1116,7 @@
      "output_type": "stream",
      "text": [
       "You matched the 2 models\n",
-      "Example model: set()\n"
+      "Example model: {'TellTruth(mark)', 'CrashedServer(susan)'}\n"
      ]
     }
    ],
@@ -1146,7 +1152,7 @@
      "output_type": "stream",
      "text": [
       "You matched the 2 models\n",
-      "Example model: {'TellTruth(susan)'}\n"
+      "Example model: {'TellTruth(nicole)'}\n"
      ]
     }
    ],
@@ -1218,7 +1224,7 @@
      "output_type": "stream",
      "text": [
       "You matched the 4 models\n",
-      "Example model: {'CrashedServer(nicole)'}\n"
+      "Example model: {'CrashedServer(john)'}\n"
      ]
     }
    ],
@@ -1297,7 +1303,7 @@
      "text": [
       "Yes: ['john']\n",
       "Maybe: []\n",
-      "No: ['susan', 'mark', 'nicole']\n"
+      "No: ['nicole', 'susan', 'mark']\n"
      ]
     }
    ],
@@ -1476,7 +1482,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1490,7 +1496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
